# practice

./: .gitignore  .gitmodules  LICENSE  README.md
OpenGL-ES/: .gitignore  OpenGL-ES.sln  README.md
OpenGL-ES/Leason-2/: GLProgram.cpp  Leason-2.vcxproj  Leason-2.vcxproj.filters  Render.cpp  Render.h  Win32NativeWindow.cpp  Win32NativeWindow.h  gles.cpp  gles.h  main.cpp
OpenGL-ES/Lesson-3/: Lesson-3.vcxproj  Lesson-3.vcxproj.filters  NativeWindow.cpp  NativeWindow.h  Render.cpp  Render.h  eglContext.cpp  eglContext.h
OpenGL-ES/leason-1/: Leason-1.vcxproj  Leason-1.vcxproj.filters  OGLES2HelloAPI_Windows.cpp
autoit/: listAllFiles.au3
context/: README.md  type-adobe.tex  type-sim.tex
cpp/: puzzle.cpp
cpp/KMP/: KMP.h  Makefile  unittest.cc  unittest.cpp
cpp/SFINAE/: Makefile  SFINAE03.h  SFINAE11.h  unittest03.cc  unittest03.cpp  unittest11.cc  unittest11.cpp
cpp/has_key/: Makefile  has_key.cpp  has_key.h  unittest.cc  unittest.cpp
cpp/itoa/: Makefile  benchmark.cpp  itoa.cpp  itoa.h  unittest.cpp
cpp/property/: Makefile  property.cpp
dns/: asyncio_dns.py
fsharp/: HelloWorld.fs  hello.fsx
julia/: pe_1_3.jl
leetcode/: Makefile  p1-1.cc  p1.c  p10.c  p2-2.cc  p2.c  p3.c  p4.c  p4.py  p5.c  p6.c  p7.c
libuv/: CMakeLists.txt
lua/luaunit/: test_luaunit.lua
notes/: Autocracy.md  CodeStyles.md  MultiLayerPDF.md  Plans_2016.md  Stock.md  StockNote1.md  Summary_2014_2015.md  Unit_Test.md
notes/SophieWorld/: note.md
notes/concretemath/: chapter1.mkd
notes/flask/: flask-doc.mkd
qml/: Canvas.qml
s7/: README.mkd
swift/: CoreLocation.swift
(+16 files in other folders)
